ejercicio Product landing page completado (pendiente de mejoras visuales)

--- a/Product landing Page/index.html
+++ b/Product landing Page/index.html
@@ -9,9 +9,9 @@
         <img id="header-img" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png">
         <nav id="nav-bar">
             <ul>
-                <li><a href="#features">Features</a></li>
-                <li><a href="#how-it-works">How it works</a></li>
-                <li><a href="#pricing">Pricing</a></li>
+                <a class="nav-link" href="#features">Features</a>
+                <a class="nav-link" href="#how-it-works">How it works</a>
+                <a class="nav-link" href="#pricing">Pricing</a>
             </ul>
         </nav>
 
@@ -44,5 +44,42 @@
         <iframe id="video" width="500px" height="315" src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen="">
         </iframe>
     </section>
+
+    <section id="pricing">
+        <div class="cajas">
+            <h3>TENOR TROMBONE</h3>
+            <ol>
+                <li><strong>$600</strong></li>
+                <li>Lorem ipsum.</li>
+                <li>Lorem ipsum.</li>
+                <li>Lorem ipsum dolor.</li>
+                <li>Lorem ipsum.</li>
+            </ol>
+            <button>SELECT</button>
+        </div>
+        <div class="cajas">
+            <h3>BASS TROMBONE</h3>
+            <ol>
+                <li><strong>$900</strong></li>
+                <li>Lorem ipsum.</li>
+                <li>Lorem ipsum.</li>
+                <li>Lorem ipsum dolor.</li>
+                <li>Lorem ipsum.</li>
+            </ol>
+            <button>SELECT</button>
+        </div>
+        <div class="cajas">
+            <h3>BASS TROMBONE</h3>
+            <ol>
+                <li><strong>$1200</strong></li>
+                <li>Plays similar to a Trumpet</li>
+                <li>Great for Jazz Bands</li>
+                <li>Lorem ipsum dolor.</li>
+                <li>Lorem ipsum.</li>
+            </ol>
+            <button>SELECT</button>
+        </div>
+    </section>
+
 </body>
 </html>
