añadidos los iconos a la pagina (falta ajustarlas)

--- a/Product landing Page/index.html
+++ b/Product landing Page/index.html
@@ -27,16 +27,31 @@
 
     <section id="features">
         <div class="div-features">
-            <h2>Premium Materials</h2>
-            <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
+            <div class="icon">
+                <img src="local_fire_department_FILL1_wght400_GRAD0_opsz48.png">
+            </div>
+            <div class="description">
+                <h2>Premium Materials</h2>
+                <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
+            </div>
         </div>
         <div class="div-features">
-            <h2>Fast Shipping</h2>
-            <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.</p>
+            <div class="icon">
+                <img src="local_shipping_FILL1_wght400_GRAD0_opsz48.png">
+            </div>
+            <div class="description">
+                <h2>Fast Shipping</h2>
+                <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.</p>
+            </div>
         </div>
         <div class="div-features">
-            <h2>Quality Assurance</h2>
-            <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
+            <div class="icon">
+                <img src="battery_very_low_FILL1_wght400_GRAD0_opsz48.png">
+            </div>
+            <div class="description">
+                <h2>Quality Assurance</h2>
+                <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
+            </div>
         </div>
     </section>
 
