Ejercicio Product landing terminado (algunas mejoras disponibles)

--- a/Product landing Page/index.html
+++ b/Product landing Page/index.html
@@ -96,5 +96,18 @@
         </div>
     </section>
 
+    <footer>
+        <div id="div-footer">
+            <nav id="nav-bar">
+                <ul>
+                    <a href="#">Privacy</a>
+                    <a href="#">Terms</a>
+                    <a href="#">Contact</a>
+                </ul>
+                <span>Copyright 2016, Original Trombones</span>
+            </nav>
+        </div>
+    </footer>
+
 </body>
 </html>
