--- a/Survey Form/index.html
+++ b/Survey Form/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Tribute Page</title>
+	<title>Survey Form</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
