--- a/Documentation Page/index.html
+++ b/Documentation Page/index.html
@@ -9,20 +9,20 @@
         <nav id="navbar">
             <header> JS Documentation</header>
             <ul>
-                <li><a class="nav-link" href="#">Introduccion</a></li>
-                <li><a class="nav-link" href="#">what you should already know</a></li>
-                <li><a class="nav-link" href="#">JavaScript and Java</a></li>
-                <li><a class="nav-link" href="#">Hello World</a></li>
-                <li><a class="nav-link" href="#">Variables</a></li>
-                <li><a class="nav-link" href="#">Declaring variables</a></li>
-                <li><a class="nav-link" href="#">Variable scope</a></li>
-                <li><a class="nav-link" href="#">Global variables</a></li>
-                <li><a class="nav-link" href="#">Constant</a></li>
-                <li><a class="nav-link" href="#">Data types</a></li>
-                <li><a class="nav-link" href="#">if...else statement</a></li>
-                <li><a class="nav-link" href="#">while statement</a></li>
-                <li><a class="nav-link" href="#">function declarations</a></li>
-                <li><a class="nav-link" href="#">Reference</a></li>
+                <li><a class="nav-link" href="#Introduction">Introduction</a></li>
+                <li><a class="nav-link" href="#What_you_should_already_know">What you should already know</a></li>
+                <li><a class="nav-link" href="#JavaScript_and_Java">JavaScript and Java</a></li>
+                <li><a class="nav-link" href="#Hello_World">Hello World</a></li>
+                <li><a class="nav-link" href="#Variables">Variables</a></li>
+                <li><a class="nav-link" href="#Declaring_variables">Declaring variables</a></li>
+                <li><a class="nav-link" href="#Variable_scope">Variable scope</a></li>
+                <li><a class="nav-link" href="#Global_variables">Global variables</a></li>
+                <li><a class="nav-link" href="#Constant">Constant</a></li>
+                <li><a class="nav-link" href="#Data_types">Data types</a></li>
+                <li><a class="nav-link" href="#if...else_statement">if...else statement</a></li>
+                <li><a class="nav-link" href="#while_statement">while statement</a></li>
+                <li><a class="nav-link" href="#Function_declarations">Function declarations</a></li>
+                <li><a class="nav-link" href="#References">References</a></li>
             </ul>
         </nav>
     </aside>
@@ -30,7 +30,7 @@
 
 
     <main id="main-doc">
-        <section id="main-section">
+        <section class="main-section" id="Introduction">
             <header class="header-body">
                 <h3>Introduction</h3>
             </header>
@@ -43,7 +43,8 @@
                 <li>Server-side JavaScript extends the core language by supplying objects relevant to running JavaScript on a server. For example, server-side extensions allow an application to communicate with a database, provide continuity of information from one invocation to another of the application, or perform file manipulations on a server.</li>
             </ul>
         </section>
-        <section id="main-section">
+
+        <section class="main-section" id="What_you_should_already_know">
             <header class="header-body">
                 <h3>What you should already know</h3>
             </header>
@@ -56,7 +57,8 @@
                 <li>Some programming experience. If you are new to programming, try one of the tutorials linked on the main page about JavaScript.</li>
             </ul>
         </section>
-        <section id="main-section">
+
+        <section class="main-section" id="JavaScript_and_Java">
             <header class="header-body">
                 <h3>JavaScript and Java</h3>
             </header>
@@ -66,9 +68,10 @@
                 JavaScript is a very free-form language compared to Java. You do not have to declare all variables, classes, and methods. You do not have to be concerned with whether methods are public, private, or protected, and you do not have to implement interfaces. Variables, parameters, and function return types are not explicitly typed.
             </p>
         </section>
-        <section id="main-section">
+
+        <section class="main-section" id="Hello_World">
             <header class="header-body">
-                <h3>Hello world</h3>
+                <h3>Hello World</h3>
             </header>
             <p>
                 To get started with writing JavaScript, open the Scratchpad and write your first "Hello world" JavaScript code:
@@ -81,7 +84,8 @@
             </div>
             <p>Select the code in the pad and hit Ctrl+R to watch it unfold in your browser!</p>
         </section>
-        <section id="main-section">
+
+        <section class="main-section" id="Variables">
             <header class="header-body">
                 <h3>Variables</h3>
             </header>
@@ -91,7 +95,8 @@
                 You can use ISO 8859-1 or Unicode letters such as å and ü in identifiers. You can also use the Unicode escape sequences as characters in identifiers. Some examples of legal names are Number_hits, temp99, and _name.
             </p>
         </section>
-        <section id="main-section">
+
+        <section class="main-section" id="Declaring_variables">
             <header class="header-body">
                 <h3>Declaring variables</h3>
             </header>
@@ -126,7 +131,8 @@
                 This syntax can be used to declare a block scope local variable. See Variable scope below.
             </p>
         </section>
-        <section id="main-section">
+
+        <section class="main-section" id="Variable_scope">
             <header class="header-body">
                 <h3>Variable scope</h3>
             </header>
@@ -149,7 +155,8 @@
                 </code></p>
             </div>
         </section>
-        <section id="main-section">
+
+        <section class="main-section" id="Global_variables">
             <header class="header-body">
                 <h3>Global variables</h3>
             </header>
@@ -158,9 +165,10 @@
                 Consequently, you can access global variables declared in one window or frame from another window or frame by specifying the window or frame name. For example, if a variable called phoneNumber is declared in a document, you can refer to this variable from an iframe as parent.phoneNumber.
             </p>
         </section>
-        <section id="main-section">
+
+        <section class="main-section" id="Constant">
             <header class="header-body">
-                <h3>Constants</h3>
+                <h3>Constant</h3>
             </header>
             <p>
                 You can create a read-only, named constant with the const keyword. The syntax of a constant identifier is the same as for a variable identifier: it must start with a letter, underscore or dollar sign and can contain alphabetic, numeric, or underscore characters.
@@ -193,7 +201,7 @@
             </div>
         </section>
 
-        <section id="main-section">
+        <section class="main-section" id="Data_types">
             <header class="header-body">
                 <h3>Data types</h3>
             </header>
@@ -217,7 +225,7 @@
             </p>
         </section>
         
-        <section id="main-section">
+        <section class="main-section" id="if...else_statement">
             <header class="header-body">
                 <h3>if...else statement</h3>
             </header>
@@ -267,6 +275,86 @@
                     if ((x = y)) { /* statements here */ }
                 </code></p>
             </div>
+        </section>
+
+        <section class="main-section" id="while_statement">
+            <header class="header-body">
+                <h3>while statement</h3>
+            </header>
+            <p>
+                A while statement executes its statements as long as a specified condition evaluates to true. A while statement looks as follows:
+            </p>
+            <div class="code">
+                <p><code>
+                    while (condition) statement
+                </code></p>
+            </div>
+            <p>
+                If the condition becomes false, statement within the loop stops executing and control passes to the statement following the loop.<br><br>
+                The condition test occurs before statement in the loop is executed. If the condition returns true, statement is executed and the condition is tested again. If the condition returns false, execution stops and control is passed to the statement following while.<br><br>
+                To execute multiple statements, use a block statement ({ ... }) to group those statements.<br><br>
+                Example: <br><br>
+                The following while loop iterates as long as n is less than three:
+            </p>
+            <div class="code">
+                <p><code>
+                    var n = 0; var x = 0; while (n < 3) { n++; x += n; }
+                </code></p>
+            </div>
+            <p>
+                With each iteration, the loop increments n and adds that value to x. Therefore, x and n take on the following values:
+            </p>
+            <ul class="listas-body">
+                <li>After the first pass: n = 1 and x = 1</li>
+                <li>After the second pass: n = 2 and x = 3</li>
+                <li>After the third pass: n = 3 and x = 6</li>
+            </ul>
+            <p>
+                After completing the third pass, the condition n < 3 is no longer true, so the loop terminates.
+            </p>
+        </section>
+
+        <section class="main-section" id="Function_declarations">
+            <header class="header-body">
+                <h3>Function declarations</h3>
+            </header>
+            <p>
+                A function definition (also called a function declaration, or function statement) consists of the function keyword, followed by:
+            </p>
+            
+            <ul class="listas-body">
+                <li>The name of the function.</li>
+                <li>A list of arguments to the function, enclosed in parentheses and separated by commas.</li>
+                <li>The JavaScript statements that define the function, enclosed in curly brackets, { }.</li>
+            </ul>
+            <p>
+                For example, the following code defines a simple function named square:
+            </p>
+            <div class="code">
+                <p><code>
+                    function square(number) { return number * number; }
+                </code></p>
+            </div>
+            <p>
+                The function square takes one argument, called number. The function consists of one statement that says to return the argument of the function (that is, number) multiplied by itself. The return statement specifies the value returned by the function.
+            </p>
+            <div class="code">
+                <p><code>
+                    return number * number;
+                </code></p>
+            </div>
+            <p>
+                Primitive parameters (such as a number) are passed to functions by value; the value is passed to the function, but if the function changes the value of the parameter, this change is not reflected globally or in the calling function.
+            </p>
+        </section>
+
+        <section class="main-section" id="References">
+            <header class="header-body">
+                <h3>References</h3>
+            </header>
+            <ul class="listas-body">
+                <li>All the documentation in this page is taken from MDN</li>
+            </ul>
         </section>
 
     </main>
