terminado todos los proyectos para la certificacion (pendiente mejoras)

--- a/Portfolio Webpage/index.html
+++ b/Portfolio Webpage/index.html
@@ -14,7 +14,7 @@
     </nav>
 
     <section id="welcome-section">
-        <h1>Hey I am Mimic</h1>
+        <h1>Hey I am Chechu</h1>
         <p class="description">a web developer</p>
     </section>
 
@@ -56,18 +56,36 @@
         <h5>How do you take your coffee?</h5>
         <div class="contact-div">
             <ul class="lista-contact">
-                <a class="a-contact">Facebook</a>
-                <a class="a-contact">GitHub</a>
-                <a class="a-contact">Twitter</a>
-                <a class="a-contact">Send a mail</a>
-                <a class="a-contact">Call me</a>
+                <div class="img-div-footer">
+                    <img src="images/facebook white.png">
+                    <a class="a-contact" href="https://es-es.facebook.com/">Facebook</a>
+                </div>
+                <div class="img-div-footer">
+                    <img src="images/github white.png">
+                    <a id="profile-link" target="_blank" class="a-contact" href="https://github.com/jesusGueGon">GitHub</a>
+                </div>
+                <div class="img-div-footer">
+                    <img src="images/twitter white.png">
+                    <a class="a-contact" href="https://twitter.com/?lang=es">Twitter</a>
+                </div>
+                <div class="img-div-footer">
+                    <img src="images/correo-electronico white.png">
+                    <a class="a-contact" href="https://mail.google.com/mail/">Send a mail</a>
+                </div>
+                <div class="img-div-footer">
+                    <img src="images/telefono white.png">
+                    <a class="a-contact" href="https://es.wikipedia.org/wiki/Tel%C3%A9fono#:~:text=El%20tel%C3%A9fono%20es%20un%20dispositivo,por%20medio%20de%20se%C3%B1ales%20el%C3%A9ctricas.">Call me</a>
+                </div>
             </ul>
         </div>
-
     </section>
 
-
+    <footer>
+        <div id="div-footer">
+            <p>**This is just a fake portfolio. All the projects and contact details given are not real.</p>
+            <p>© Created for freeCodeCamp</p>
+        </div>
+    </footer>
     
-
 </body>
 </html>
