Todos los proyectos terminados

--- a/Product landing Page/index.html
+++ b/Product landing Page/index.html
@@ -28,7 +28,7 @@
     <section id="features">
         <div class="div-features">
             <div class="icon">
-                <img src="local_fire_department_FILL1_wght400_GRAD0_opsz48.png">
+                <img src="fire orange.png">
             </div>
             <div class="description">
                 <h2>Premium Materials</h2>
@@ -37,7 +37,7 @@
         </div>
         <div class="div-features">
             <div class="icon">
-                <img src="local_shipping_FILL1_wght400_GRAD0_opsz48.png">
+                <img src="truck orange.png">
             </div>
             <div class="description">
                 <h2>Fast Shipping</h2>
@@ -46,7 +46,7 @@
         </div>
         <div class="div-features">
             <div class="icon">
-                <img src="battery_very_low_FILL1_wght400_GRAD0_opsz48.png">
+                <img src="baterry orange.png">
             </div>
             <div class="description">
                 <h2>Quality Assurance</h2>
